# scaffoldkit

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  scaffoldkit-docker
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
blueprints/cli-tool/static/: .gitignore
blueprints/cli-tool/templates/: AI_CONTEXT.md.j2  README.md.j2
blueprints/cli-tool/templates/docs/: architecture.md.j2
blueprints/nextjs-frontend/static/: .editorconfig
blueprints/nextjs-frontend/templates/: AI_CONTEXT.md.j2  README.md.j2
blueprints/nextjs-frontend/templates/docs/: architecture.md.j2  component-guide.md.j2  ways-of-working.md.j2
blueprints/rest-api/templates/: README.md.j2
blueprints/rest-api/templates/docs/: ways-of-working.md.j2
blueprints/saas-dashboard/: blueprint.yaml
blueprints/saas-dashboard/templates/: AI_CONTEXT.md.j2
blueprints/saas-dashboard/templates/docs/: architecture.md.j2  ways-of-working.md.j2
blueprints/static-site/static/: .editorconfig  .gitignore
blueprints/static-site/templates/: AI_CONTEXT.md.j2  README.md.j2
blueprints/symfony-backend/static/: .gitignore
blueprints/symfony-backend/templates/: AI_CONTEXT.md.j2
blueprints/symfony-nextjs/templates/: AI_CONTEXT.md.j2
docs/: architecture.md  blueprints.md  cli.md  planforge-integration.md
src/scaffoldkit/: __init__.py  blueprint_loader.py  cli.py  filesystem.py  generator.py  models.py  planforge.py  renderer.py  scaffold_blueprint.py  tui.py  validators.py  variable_conditions.py
tasks/: task-001-graceful-blueprint-resolution-and-planforge-import.md
tests/: test_blueprint_contract_audit.py  test_blueprint_loader.py  test_cli.py  test_company_blueprints.py  test_django_drf_starter.py  test_express_api_starter.py  test_filesystem.py  test_generator.py  test_integration.py  test_models.py  test_new_blueprints.py  test_nextjs_frontend_starter.py  test_nextjs_fullstack_starter.py  test_planforge.py  test_python_api_blueprints.py  test_reference_php_app_blueprint.py  test_renderer.py  test_rest_api_starter.py  test_scaffold_blueprint.py  test_springboot_backend_starter.py  test_springboot_blueprint.py  test_static_site_starter.py  test_symfony_backend_blueprint.py  test_symfony_nextjs_starter.py  test_tui.py  test_validators.py  test_variable_conditions.py
(+351 files in other folders)
